<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Image-->
        <ImageView
            android:id="@+id/popup_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/getty_image_description"
            android:scaleType="fitCenter" />

        <!--Title-->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space_small"
            android:paddingRight="@dimen/space_small"
            android:paddingTop="@dimen/space_smaller"
            android:text="@string/title_placeholder"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

        <!--Artist-->
        <TextView
            android:id="@+id/tv_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space_small"
            android:paddingRight="@dimen/space_small"
            android:text="@string/artist_placeholder"
            android:textSize="@dimen/text_medium" />

        <!--Similar images title-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/space_tiny"
            android:paddingLeft="@dimen/space_small"
            android:paddingRight="@dimen/space_small"
            android:paddingTop="@dimen/space_medium"
            android:text="@string/title_similar_images"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

        <!--Similar images-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/similar_images_layout_height"
            android:layout_marginBottom="@dimen/space_small"
            android:layout_marginLeft="@dimen/space_small"
            android:layout_marginRight="@dimen/space_small"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/similar_image_view1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/similar_image_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_placeholder" />

            <ImageView
                android:id="@+id/similar_image_view2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/space_small"
                android:layout_marginRight="@dimen/space_small"
                android:layout_weight="1"
                android:contentDescription="@string/similar_image_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_placeholder" />

            <ImageView
                android:id="@+id/similar_image_view3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/similar_image_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_placeholder" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>